# SCGWT

./: README.md
SCGWT/: ABOUT.md  pyproject.toml
SCGWT/configs/: default.yaml  testing.yaml
SCGWT/data/: logs.txt
SCGWT/docs/: CONFIGURATION.md  TESTING.md
SCGWT/scgwt/: __init__.py
SCGWT/scgwt/agents/: __init__.py  modules.py
SCGWT/scgwt/cognition/: __init__.py  workspace.py
SCGWT/scgwt/config/: __init__.py  loading.py
SCGWT/scgwt/memory/: __init__.py  episodic.py
SCGWT/scgwt/motivation/: __init__.py  empowerment.py  intrinsic_reward.py  metrics.py  safety.py
SCGWT/scgwt/training/: __init__.py  __main__.py  buffer.py  loop.py
SCGWT/scgwt/world_model/: __init__.py  decoder.py  dynamics.py  encoder.py  ensemble.py
SCGWT/tests/: test_components.py  test_dreaming.py  test_motivation.py  test_training.py
